--- a/Tools/App.xaml
+++ b/Tools/App.xaml
@@ -1,13 +1,14 @@
-﻿<Application x:Class="RpgTools.App"
+﻿<Application x:Class="RpgTools.Main.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:rpgTools="clr-namespace:RpgTools">
+             xmlns:rpgTools="clr-namespace:RpgTools"
+             xmlns:main="clr-namespace:RpgTools.Main">
     <Application.Resources>
-            <ResourceDictionary>
-                <ResourceDictionary.MergedDictionaries>
-                    <ResourceDictionary>
-                        <rpgTools:MefBootstrapper x:Key="MefBootstrapper" />
-                    </ResourceDictionary>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <main:MefBootstrapper x:Key="MefBootstrapper" />
+                </ResourceDictionary>
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
@@ -15,6 +16,6 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatButton.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            </ResourceDictionary>
-        </Application.Resources>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
