--- a/Tools/Views/ShellView.xaml
+++ b/Tools/Views/ShellView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="RpgTools.Views.ShellView"
+﻿<UserControl x:Class="RpgTools.Main.Views.ShellView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewModels="clr-namespace:RpgTools.ViewModels"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:cal="http://www.caliburnproject.org"
+             xmlns:viewModels="clr-namespace:RpgTools.Main.ViewModels"
              d:DataContext="{d:DesignInstance Type=viewModels:ShellViewModel, IsDesignTimeCreatable=True}"
              mc:Ignorable="d"
              d:DesignHeight="150"
