--- a/Tools/App.xaml
+++ b/Tools/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application x:Class="RpgTools.Main.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:rpgTools="clr-namespace:RpgTools"
              xmlns:main="clr-namespace:RpgTools.Main">
     <Application.Resources>
         <ResourceDictionary>
@@ -15,8 +14,8 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatButton.xaml" />
-                <ResourceDictionary Source="Resources/NoChromeButton.xaml" />
-                <ResourceDictionary Source="Resources/FallbackImage.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Core;component/Resources/Converter.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Core;component/Resources/NoChromeButton.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
