--- a/Modules/LocationPresenter/Views/LocationsView.xaml
+++ b/Modules/LocationPresenter/Views/LocationsView.xaml
@@ -5,12 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:lp="clr-namespace:RpgTools.LocationPresenter"
-             xmlns:viewModels="clr-namespace:RpgTools.LocationPresenter.ViewModels"
+             xmlns:vm="clr-namespace:RpgTools.LocationPresenter.ViewModels"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=viewModels:LocationsViewModel, IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance Type=vm:LocationsViewModel, IsDesignTimeCreatable=True}"
              d:DesignHeight="300"
-             d:DesignWidth="500"
+             d:DesignWidth="300"
              Padding="5">
     <Grid>
         <Grid.Resources>
