--- a/Modules/LocationPresenter/Views/LocationDetailsView.xaml
+++ b/Modules/LocationPresenter/Views/LocationDetailsView.xaml
@@ -1,29 +1,15 @@
-﻿<UserControl x:Class="RpgTools.LocationPresenter.Views.LocationDetailView"
+﻿<UserControl x:Class="RpgTools.LocationPresenter.Views.LocationDetailsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:locationPresenter="clr-namespace:RpgTools.LocationPresenter"
-             xmlns:viewModels="clr-namespace:RpgTools.LocationPresenter.ViewModels"
-             mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=viewModels:LocationDetailViewModel, IsDesignTimeCreatable=True}">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resources/LocationDataTemplates.xaml" />
-                <ResourceDictionary>
-                    <locationPresenter:LocationTemplateSelector x:Key="TemplateSelector"
-                                                 LocationTemplate="{StaticResource LocationDataTemplate}"
-                                                 StarSystemTemplate="{StaticResource StarSystemDataTemplate}"
-                                                 SectorTemplate="{StaticResource SectorDataTemplate}"
-                                                 PlanetTemplate="{StaticResource PlanetDataTemplate}"
-                                                 CityTemplate="{StaticResource CityDataTemplate}" />
-                </ResourceDictionary>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
+
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -78,7 +64,7 @@
                    Grid.Column="0"
                    TextAlignment="Right"
                    Margin="0,3,3,3" />
-        <TextBox Text="{Binding Path=Location.Coordinates}" 
+        <TextBox Text="{Binding Path=Location.Coordinates}"
                  Grid.Row="3"
                  Grid.Column="1"
                  Margin="3,3,0,3" />
@@ -112,7 +98,23 @@
                          Grid.Column="0"
                          Grid.ColumnSpan="2"
                          Content="{Binding Path=Location}"
-                         ContentTemplateSelector="{StaticResource TemplateSelector}"
-                         Margin="0,3,0,3" />
+                         ContentTemplateSelector="{DynamicResource TemplateSelector}"
+                         Margin="0,3,0,3">
+            <ContentControl.Resources>
+                <ResourceDictionary>
+                    <ResourceDictionary.MergedDictionaries>
+                        <ResourceDictionary Source="../Resources/LocationDataTemplates.xaml" />
+                        <ResourceDictionary>
+                            <locationPresenter:LocationTemplateSelector x:Key="TemplateSelector"
+                                                                        LocationTemplate="{StaticResource LocationDataTemplate}"
+                                                                        StarSystemTemplate="{StaticResource StarSystemDataTemplate}"
+                                                                        SectorTemplate="{StaticResource SectorDataTemplate}"
+                                                                        PlanetTemplate="{StaticResource PlanetDataTemplate}"
+                                                                        CityTemplate="{StaticResource CityDataTemplate}" />
+                        </ResourceDictionary>
+                    </ResourceDictionary.MergedDictionaries>
+                </ResourceDictionary>
+            </ContentControl.Resources>
+        </ContentControl>
     </Grid>
 </UserControl>
