--- a/Modules/LocationPresenter/Views/LocationView.xaml
+++ b/Modules/LocationPresenter/Views/LocationView.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="RpgTools.LocationPresenter.Views.LocationView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:vm="clr-namespace:RpgTools.LocationPresenter.ViewModels"
+             x:Class="RpgTools.LocationPresenter.Views.LocationView"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=vm:LocationViewModel, IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type={x:Type vm:LocationViewModel}}"
              cal:Bind.AtDesignTime="True"
              Padding="5">
     <Grid>
@@ -66,6 +66,15 @@
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
+            
+            <Button Content="Create Location"
+                    DockPanel.Dock="Top">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <cal:ActionMessage MethodName="CreateLocation" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </Button>
 
             <Expander Header="Location Filter"
                       DockPanel.Dock="Top"
@@ -73,7 +82,7 @@
                       IsExpanded="True">
                 <ItemsControl x:Name="CheckListItems"
                               Margin="0,0,2.5,5"
-                              ItemsSource="{Binding Path=CheckListItems}">
+                              ItemsSource="{Binding CheckListItems}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <UniformGrid />
@@ -87,9 +96,9 @@
                                       IsThreeState="False">
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="Click">
-                                        <cal:ActionMessage cal:MethodName="FilterChecklist">
-                                            <cal:Parameter Value="{Binding Path=Name}" />
-                                            <cal:Parameter Value="{Binding Path=IsChecked}" />
+                                        <cal:ActionMessage MethodName="FilterChecklist">
+                                            <cal:Parameter Value="{Binding Name}" />
+                                            <cal:Parameter Value="{Binding IsChecked}" />
                                         </cal:ActionMessage>
                                         <cal:ActionMessage MethodName="FilterLocations" />
                                     </i:EventTrigger>
@@ -104,19 +113,31 @@
                           DockPanel.Dock="Top">
                 <ListBox x:Name="Locations"
                          SelectedItem="SelectedLocation"
-                         ItemsSource="{Binding Path=Locations}">
+                         ItemsSource="{Binding Locations}"
+                         Tag="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext}">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
+                                <StackPanel.ContextMenu>
+                                    <ContextMenu DataContext="{Binding RelativeSource={RelativeSource Self}, Path=PlacementTarget.Tag}">
+                                        <MenuItem Header="Delete">
+                                            <i:Interaction.Triggers>
+                                                <i:EventTrigger EventName="Click">
+                                                    <cal:ActionMessage MethodName="Close" />
+                                                </i:EventTrigger>
+                                            </i:Interaction.Triggers>
+                                        </MenuItem>
+                                    </ContextMenu>
+                                </StackPanel.ContextMenu>
                                 <TextBlock Text="{Binding Value.Name}" />
-                                <TextBlock Text="{Binding Key, StringFormat={} ({0})}" />
+                                <TextBlock Text="{Binding Key, StringFormat=' (\{0\})'}" />
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="MouseDoubleClick">
                             <cal:ActionMessage MethodName="OpenLocationTab">
-                                <cal:Parameter Value="{Binding ElementName=Locations, Path=SelectedItem}"></cal:Parameter>
+                                <cal:Parameter Value="{Binding SelectedItem, ElementName=Locations}" />
                             </cal:ActionMessage>
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
@@ -129,10 +150,17 @@
                     Grid.Column="2"
                     Grid.Row="0"
                     Margin="3,5,5,3"
-                    Visibility="{Binding Path=TabControlVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    Visibility="{Binding TabControlVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
             <TabControl.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
+                    <StackPanel Orientation="Horizontal"
+                                x:Name="TabHeaderStackPanel">
+                        <StackPanel.ContextMenu>
+                            <ContextMenu DataContext="{Binding RelativeSource={RelativeSource Self}, Path=DataContext}">
+                                <MenuItem Header="Close This"
+                                          cal:Message.Attach="Close()" />
+                            </ContextMenu>
+                        </StackPanel.ContextMenu>
                         <TextBlock Text="{Binding DisplayName}" />
                         <Button Padding="10,0,0,0"
                                 Content="X"
@@ -142,17 +170,39 @@
                 </DataTemplate>
             </TabControl.ItemTemplate>
         </TabControl>
+        <Grid Grid.Column="2"
+              Grid.Row="1"
+              Margin="5,3,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
 
-        <Button Content="Save"
-                Margin="5,3,0,0"
-                Grid.Column="2"
-                Grid.Row="1"
-                Visibility="{Binding Path=SaveButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="Click">
-                    <cal:ActionMessage MethodName="SaveLocation" />
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-        </Button>
+            <Button Content="Save"
+                    Margin="0,0,3,0"
+                    Grid.Column="0"
+                    Visibility="{Binding SaveButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <cal:ActionMessage MethodName="SaveLocation">
+                            <cal:Parameter Value="{Binding ActiveItem}" />
+                        </cal:ActionMessage>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </Button>
+
+            <Button Content="Delete"
+                    Margin="3,0,0,0"
+                    Grid.Column="1"
+                    Visibility="{Binding SaveButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <cal:ActionMessage MethodName="DeleteLocation">
+                            <cal:Parameter Value="{Binding ActiveItem}" />
+                        </cal:ActionMessage>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </Button>
+        </Grid>
     </Grid>
 </UserControl>
