--- a/Modules/CharacterPresenter/Views/CharactersView.xaml
+++ b/Modules/CharacterPresenter/Views/CharactersView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="CharacterPresenter.Views.CharactersView"
+﻿<UserControl x:Class="RpgTools.CharacterPresenter.Views.CharactersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:vm="clr-namespace:CharacterPresenter.ViewModels"
+             xmlns:vm="clr-namespace:RpgTools.CharacterPresenter.ViewModels"
              mc:Ignorable="d"
              cal:Bind.AtDesignTime="True"
              d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type={x:Type vm:CharactersViewModel}}">
@@ -109,7 +109,8 @@
 
             <ScrollViewer Margin="5,3,3,5"
                           DockPanel.Dock="Top">
-                <ListBox SelectedItem="SelectedCharacter"
+                <ListBox x:Name="Characters"
+                         SelectedItem="SelectedCharacter"
                          ItemsSource="{Binding Characters}">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
@@ -131,21 +132,16 @@
             </ScrollViewer>
         </DockPanel>
 
-        <TabControl Grid.Column="2"
+        <TabControl x:Name="Items"
+                    Grid.Column="2"
                     Grid.Row="0"
                     Margin="3,5,5,3"
-                    Visibility="{Binding TabControlVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
-                    ItemsSource="{Binding Path=Items}">
+                    Visibility="{Binding TabControlVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <!-- Need to investigate why binding with name works, but not with ItemsSource -->
             <TabControl.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal"
                                 x:Name="TabHeaderStackPanel">
-                        <StackPanel.ContextMenu>
-                            <ContextMenu DataContext="{Binding RelativeSource={RelativeSource Self}, Path=DataContext}">
-                                <MenuItem Header="Close This"
-                                          cal:Message.Attach="Close()" />
-                            </ContextMenu>
-                        </StackPanel.ContextMenu>
                         <TextBlock Text="{Binding DisplayName}" />
                         <Button Padding="10,0,0,0"
                                 Content="X"
