--- a/Modules/CharacterPresenter/Views/CharactersView.xaml
+++ b/Modules/CharacterPresenter/Views/CharactersView.xaml
@@ -32,7 +32,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition />
-            <RowDefinition Height="111" />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
         <Button Grid.Column="1"
