--- a/Modules/CharacterPresenter/Views/CharacterDetailsView.xaml
+++ b/Modules/CharacterPresenter/Views/CharacterDetailsView.xaml
@@ -137,7 +137,7 @@
                     <TextBox Text="{Binding Path=Character.Motto}" />
 
                     <Label Content="Description" />
-                    <TextBox Text="{Binding Path=Character.ShortDescription}"
+                    <TextBox Text="{Binding Path=Character.Description}"
                              MinHeight="100" />
                 </StackPanel>
             </Grid>
