Fixed bugs resulting from different changes resulting from the new repository pattern.

--- a/Modules/CharacterPresenter/Views/CharacterDetailsView.xaml
+++ b/Modules/CharacterPresenter/Views/CharacterDetailsView.xaml
@@ -221,7 +221,7 @@
 
                             <Label Content="Gender" />
                             <ComboBox x:Name="ComboBox"
-                                      ItemsSource="{extensions:EnumList models:Character+PhysicalAppearance+Genders }"
+                                      ItemsSource="{extensions:EnumList models:Genders }"
                                       SelectedItem="{Binding Path=Character.Appearance.Gender}" />
 
                             <Label Content="Age" />
